Add validations and token
