# validations/verifyToken.js
@@ -1,0 +1,18 @@
+const { send } = require('express/lib/response')
+const jsonwebtoken = require('jsonwebtoken')
+
+function auth(req,res,next){
+    const token = req.header('auth-token')
+    if(!token){
+        return res.status(401).json({ error: 'Access denied' })
+    }
+    try{
+        const verified = jsonwebtoken.verify(token,process.env.TOKEN_SECRET)
+        req.user=verified
+        next()
+    }catch(err){
+        return res.status(401).json({ error: 'Invalid token' })
+    }
+}
+
+module.exports=auth
